<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/cal"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_grade"
        android:textSize="34sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/etSubject1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtName"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/enter_subject_1_marks"
        android:background="@drawable/shape"
        android:textColorHint="#A1887F"
        android:textStyle="bold"
        android:autofillHints="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:padding="16dp"/>

    <EditText
        android:id="@+id/etSubject2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etSubject1"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/shape"
        android:hint="@string/enter_subject_2_marks"
        android:textColorHint="#A1887F"
        android:textStyle="bold"
        android:padding="16dp"
        android:inputType="numberDecimal"
        android:autofillHints="no"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/etSubject3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etSubject2"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape"
        android:hint="@string/enter_subject_3_marks"
        android:textStyle="bold"
        android:textColorHint="#A1887F"
        android:padding="16dp"
        android:minHeight="48dp"
        android:autofillHints="no"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/etSubject4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etSubject3"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/shape"
        android:hint="@string/enter_subject_4_marks"
        android:textColorHint="#A1887F"
        android:textStyle="bold"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:minHeight="48dp"
        android:autofillHints="no"/>

    <EditText
        android:id="@+id/etSubject5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etSubject4"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape"
        android:hint="@string/enter_subject_5_marks"
        android:textColorHint="#A1887F"
        android:autofillHints="no"
        android:padding="16dp"
        android:minHeight="48dp"
        android:inputType="numberDecimal"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etSubject5"
        android:layout_marginTop="50dp"
        android:text="@string/calculate"
        android:textStyle="bold"
        android:textColorHint="#A1887F"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>